--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.1.4-3'
-		springBootVersion = '1.5.7.RELEASE'
+		kotlinVersion = "1.1.4-3"
+		springBootVersion = "1.5.7.RELEASE"
 	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+		classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
 	}
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: "kotlin"
+apply plugin: "kotlin-spring"
+apply plugin: "eclipse"
+apply plugin: "org.springframework.boot"
 
-group = 'de.jcvogt'
-version = '0.0.1-SNAPSHOT'
+group = "de.jcvogt"
+version = "0.0.1-SNAPSHOT"
 sourceCompatibility = 1.8
 
 compileKotlin {
@@ -33,19 +33,18 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
-	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+	compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}"
+	compile "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
 
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile "org.springframework.boot:spring-boot-starter-web"
+	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+	compile "org.springframework.boot:spring-boot-starter-actuator"
 
-	compile('org.webjars:bootstrap:3.3.7')
-	compile('org.webjars:webjars-locator')
+	compile "org.webjars:bootstrap:3.3.7"
+	compile "org.webjars:webjars-locator"
 
-	runtime('org.springframework.boot:spring-boot-devtools')
+	runtime "org.springframework.boot:spring-boot-devtools"
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile "org.springframework.boot:spring-boot-starter-test"
 }
