--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		kotlinVersion = "1.1.4-3"
+		kotlinVersion = "1.1.50"
 		springBootVersion = "1.5.7.RELEASE"
 	}
 	repositories {
